Fix navbar space if there is no page search_product_url

--- a/shop/templates/shop/navbar/search-form.html
+++ b/shop/templates/shop/navbar/search-form.html
@@ -20,6 +20,6 @@
 	{% endif %}
 </form>
 {% else %}
-	<div class="no-searchbar"></div>
+	<div class="space-bar"></div>
 {% endif %}
 {% endspaceless %}
