--- a/shop/static/shop/css/_navbar.scss
+++ b/shop/static/shop/css/_navbar.scss
@@ -1,9 +1,12 @@
 .navbar-nav {
-	form[shop-product-search] {
+    form[shop-product-search]  {
 		input {
 			width: 25rem;
 		}
-	}
+    }
+    .space-bar{
+                    width: 25rem;
+    }
 }
 
 // if Django-CMS toolbar is expanded, move fixed navbar below
